[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "option-pricer"
version = "0.1.0"
description = "A QuantLib-inspired pricing library for learning and research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["option_pricer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
